src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the Contact is Active or Inactive i.e. does the contact exist at the Organisation</description>
        <inlineHelpText>Indicates whether the Contact is Active or Inactive i.e. does the contact exist at the Organisation</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is populated, Contact Principle Address fields will be populated from this address, not from the Account Principle Address</description>
        <inlineHelpText>Overrides Account Principle Address for Contact Principle Address fields</inlineHelpText>
        <label>Applicable Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contacts (Applicable Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Principle_Address_Area__c</fullName>
        <description>Pulls Account principle address if applicable address is blank</description>
        <formula>IF(
 ISBLANK( Applicable_Address__c ),
 Account.Principle_Address_Area__c ,
 Applicable_Address__r.Address_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Principle Address: Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Principle_Address_Building__c</fullName>
        <formula>IF(
 ISBLANK( Applicable_Address__c ) ,
 Account.Principle_Address_Building__c ,
 Applicable_Address__r.Address_Building__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Principle Address: Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Principle_Address_City__c</fullName>
        <formula>IF(
 ISBLANK( Applicable_Address__c ) ,
 Account.Principle_Address_City__c ,
 Applicable_Address__r.Address_City__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Principle Address: City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Principle_Address_Country__c</fullName>
        <formula>IF( ISBLANK( Applicable_Address__c ) ,
 TEXT(Account.Principle_Address_Country__c) ,
TEXT( Applicable_Address__r.Address_Country__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Principle Address: Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Principle_Address_State_Province__c</fullName>
        <formula>IF( ISBLANK( Applicable_Address__c ) ,
 Account.Principle_Address_State_Province__c ,
 Applicable_Address__r.Address_State_Province__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Principle Address:State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Principle_Address_Street__c</fullName>
        <formula>IF( ISBLANK( Applicable_Address__c ) ,
 Account.Principle_Address_Street__c ,
 Applicable_Address__r.Address_Street__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Principle Address: Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Principle_Address_ZIP_Postal__c</fullName>
        <formula>IF(ISBLANK( Applicable_Address__c ),
 Account.Principle_Address_ZIP_Postal_Code__c ,
 Applicable_Address__r.Address_ZIP_Postal_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Principle Address: ZIP / Postal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>What type of influence the contact has in the buying decision making process.</description>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>BSC Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Session_ID__c</fullName>
        <label>DA Session ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Token__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DA Token</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_User_ID__c</fullName>
        <label>DA User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaddyAnalytics__DA_Visitor_Geolocation__c</fullName>
        <label>DA Visitor Geolocation</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Data_Check_Last_Updated_By__c</fullName>
        <description>Auto populated with person that last updated Data Check value</description>
        <inlineHelpText>Auto populated with person that last updated Data Check value</inlineHelpText>
        <label>Contact Data Check Last Updated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Check_Last_Updated__c</fullName>
        <description>Populated buy workflow when the Data Check Result was last changed</description>
        <inlineHelpText>Auto populates date when the Data check result value is changed</inlineHelpText>
        <label>Contact Data Check Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Check__c</fullName>
        <description>Holds result of data check</description>
        <inlineHelpText>Please select a value to describe the result of the data check for this record</inlineHelpText>
        <label>Contact Data Check</label>
        <picklist>
            <picklistValues>
                <fullName>Record updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No update required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner incorrect prevented update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not make contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <description>Defines data quality description based on field information</description>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <description>Defines data quality score based on field information</description>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DedupeText__c</fullName>
        <description>Concatenates FirstName and LastName to identify duplicate records</description>
        <formula>FirstName &amp; LastName &amp; Email</formula>
        <inlineHelpText>Concatenates FirstName and LastName to identify duplicate records</inlineHelpText>
        <label>DedupeText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact has left this organisation</description>
        <label>Departed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drawloop_Next_Booking_Confirmation_Email__c</fullName>
        <formula>Latest_Opportunity_ID__c &amp; &quot;;SFContact:&quot; &amp; Id &amp; &quot;;DDPId:a3TL00000006fii;Deploy:a3SL0000000HRkL&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drawloop Next Booking Confirmation Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Not_Known__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked, then the email address on the contact is not mandatory</description>
        <inlineHelpText>If ticked, then the email address on the contact is not mandatory</inlineHelpText>
        <label>Email Not Known</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Temp__c</fullName>
        <description>Dummy Email Field as placeholder to enable import</description>
        <label>Email Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Me_OQS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temp field used to id records to be exported to website to support the launch of OCS</description>
        <inlineHelpText>Tick here to mark this record for OQS export</inlineHelpText>
        <label>Export Me OQS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_IDG_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TIck this box to add this record to the overnight data enhancement job.  Will only be included if the IDG Verified box is unchecked.</description>
        <inlineHelpText>TIck this box to add this record to the overnight data enhancement job.  Will only be included if the IDG Verified box is unchecked.</inlineHelpText>
        <label>Force IDG Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Identifies the Gender of the Contact</description>
        <inlineHelpText>Identifies the Gender of the Contact</inlineHelpText>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>?</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link between the Contact and a Home Address</description>
        <label>Home Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contact Home Address</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Honours__c</fullName>
        <inlineHelpText>Captures professional and other qualifications and titles which entitles the holder may include in their name.</inlineHelpText>
        <label>Honours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDG_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that this contact has been verified by IDG and had address and demographic data updated</description>
        <inlineHelpText>When ticked. this contact has been verified by IDG and had address and demographic data updated</inlineHelpText>
        <label>IDG Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrate_With_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled the contact will be pushed to marketo for Marketing Automation</description>
        <inlineHelpText>If enabled the contact will be pushed to marketo for Marketing Automation</inlineHelpText>
        <label>Integrate With Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joining_Instruction_Documents__c</fullName>
        <label>Joining Instruction Documents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Joining_Instructions_Sent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Joining Instructions Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines contact record as a key contact of the organisation</description>
        <label>Key Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Opportunity_ID__c</fullName>
        <label>Latest Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Grade__c</fullName>
        <description>Marketo Filed to Hold Grade associated to Marketo interaction</description>
        <inlineHelpText>Marketo Filed to Hold Grade associated to Marketo interaction</inlineHelpText>
        <label>Lead Grade</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ok_to_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for Administrator only, when checks have been done on the contact. Tick this to bypass the validation rule</description>
        <label>Ok to Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Email__c</fullName>
        <label>Opportunity Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <label>Opportunity Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Operations_Coordinator_Email__c</fullName>
        <label>Opportunity Operations Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_List__c</fullName>
        <label>Opportunity Product List</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Weblist_ICTLRA__c</fullName>
        <label>Opportunity Product Weblist ICTLRA</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Weblist_ICT__c</fullName>
        <label>Opportunity Product Weblist ICT</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Weblist_INTPBLRA__c</fullName>
        <label>Opportunity Product Weblist INTPBLRA</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Weblist_ISR__c</fullName>
        <label>Opportunity Product Weblist ISR</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Weblist_JOMC__c</fullName>
        <label>Opportunity Product Weblist JOMC</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Weblist_PUBLRA__c</fullName>
        <label>Opportunity Product Weblist PUBLRA</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Weblist_PUB__c</fullName>
        <label>Opportunity Product Weblist PUB</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Weblist_TAD__c</fullName>
        <label>Opportunity Product Weblist TAD</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Weblist_TAU__c</fullName>
        <label>Opportunity Product Weblist TAU</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PAYCP1__Country_Code__c</fullName>
        <formula>CASE(MailingCountry,
&quot;USA&quot;, &quot;US&quot;,
&quot;Canada&quot;, &quot;CA&quot;,
&quot;France&quot;, &quot;FR&quot;,
&quot;UK&quot;, &quot;GB&quot;,
&quot;Australia&quot;, &quot;AU&quot;,
&quot;Spain&quot;, &quot;ES&quot;,
&quot;Portugal&quot;, &quot;PT&quot;,
&quot;Italy&quot;, &quot;IT&quot;,
&quot;Germany&quot;, &quot;DE&quot;,
&quot;Sweden&quot;, &quot;SE&quot;,
&quot;Norway&quot;, &quot;NO&quot;,
&quot;Austria&quot;, &quot;AT&quot;,
&quot;Belgium&quot;,&quot;BE&quot;,
&quot;Denmark&quot;,&quot;DK&quot;,
&quot;Finland&quot;,&quot;FI&quot;,
&quot;Greece&quot;,&quot;GR&quot;,
&quot;Ireland&quot;,&quot;IE&quot;,
&quot;Netherlands&quot;,&quot;NL&quot;,
&quot;New Zealand&quot;,&quot;NZ&quot;,
&quot;Norway&quot;,&quot;NO&quot;,
&quot;Poland&quot;,&quot;PO&quot;,
&quot;Switzerland&quot;,&quot;CH&quot;,
&quot;England:Wales:Scotland:United Kingdom&quot;,&quot;GB&quot;,
&quot;GB&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PK_CB_PN_ID__c</fullName>
        <description>This is  the Primary Key of the Person(Contact) from the source Person data and maps to Person.PN_ID from the Organisation table in the CB database. 

The primary key of the record managed by Salesforce will be Contact.Id and is generated during record creation</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a System Administrator field</inlineHelpText>
        <label>PK_CB_PN_ID</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Preferred_Comm_Method__c</fullName>
        <label>Preferred Comm Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receive_Email_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick if customer has requested to receive a newsletter</description>
        <inlineHelpText>Tick if customer has requested to receive a newsletter</inlineHelpText>
        <label>Receive Email Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_IDG_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When data is matched and appended by IDG API&apos;s and multiple matches are found, this box is ticked. This informs Marketing that this record should be manually checked using the IDG Prove application</description>
        <inlineHelpText>Denotes multiple matches found by IDG, this record should be manually checked and updated where necessary</inlineHelpText>
        <label>Requires IDG Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <description>Area of responsibility within the organisation</description>
        <inlineHelpText>Area of responsibility within the organisation</inlineHelpText>
        <label>Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>TBA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks which contacts have retired</description>
        <inlineHelpText>If this contact has retired, please tick this box</inlineHelpText>
        <label>Retired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_Network_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the contact has purchased Safety network this disables the email functionality in Wulters Klewer for this contact.</inlineHelpText>
        <label>Safety Network Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_Network_User_ID__c</fullName>
        <description>Amended Website ID for Customer Services Reports (not on page layouts)</description>
        <formula>IF( WebId__c=&quot;&quot;, &quot;&quot;, &quot;BSC-&quot;+ WebId__c)</formula>
        <label>Safety Network User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email_Address__c</fullName>
        <description>To be used for reference only!</description>
        <inlineHelpText>To be used for reference only!</inlineHelpText>
        <label>Secondary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SmartFocus_Hard_bounce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BSC Used SmartFocus to send newsletter emails (before using Pure 360 which was integrated with Salesforce). If this field is checked SmartFocus had detected a hard bounce during the sending of a newsletter email.</description>
        <inlineHelpText>If this field is checked the old newsletter sending system detected a &quot;hard bounce&quot; during sending of a newsletter email (the email address is incorrect). This was created on 04/07/2011 but is incompatible with the new newletter system &amp; won&apos;t be updated.</inlineHelpText>
        <label>SmartFocus Hard bounce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Denotes the source of this contact record</description>
        <inlineHelpText>Denotes the source of this contact record</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourced_By_IDG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a record is created by IDG this is set to true</description>
        <inlineHelpText>When a record is created by Intelligent Data Group this is set to true</inlineHelpText>
        <label>Sourced By IDG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Renewal_Communication__c</fullName>
        <inlineHelpText>When a subscription renews this decides how the contact will be sent the renewal information if &quot;Use Global Setting&quot; is set then the global system settings will decide how the renewal will be communicated.</inlineHelpText>
        <label>Subscription Renewal Communication</label>
        <picklist>
            <picklistValues>
                <fullName>Use Global Setting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Email Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email and Post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Stores the Contact Name Suffix e.g.MSc, MIOSH, AMEIMA</description>
        <inlineHelpText>Stores the Contact Name Suffix e.g.MSc, MIOSH, AMEIMA</inlineHelpText>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>XXX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TempWebEmail__c</fullName>
        <description>used to store website emails addresses where sfdc email address are different but valid.  This will be used for imprting users into new website then deleted.</description>
        <label>TempWebEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>USIN__c</fullName>
        <description>We purchase prospect data from different agencies. This field contains the unique person identifier from the source system from which the Organisation was purchased</description>
        <inlineHelpText>Unique person reference as defined by data supplier/cleanser</inlineHelpText>
        <label>USIN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebId__c</fullName>
        <description>The unique Website user Id for this contact. At point of creation this field may not be unique within Salesforce as there maybe multiple contacts with the same email address.</description>
        <inlineHelpText>The Website User Id that uniquly identifies the user on the Website</inlineHelpText>
        <label>Website User Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Contact_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints_Timestamp__c</fullName>
        <label>Updated Touchpoints Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>experianqas__Updated_Touchpoints__c</fullName>
        <label>Updated Touchpoints</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/Contact_Full_List?id=&quot; &amp; Id, IMAGE(&quot;https://www.marketo.com/salesforce/images/applicationLink.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
</CustomObject>